# moa-backend

./: .gitignore  README.md  main.py  pyproject.toml  server.py  test_ai_integration_simple.py  test_gpt_integration.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
app/: __init__.py  main.py
app/api/: analysis.py  answer.py  answers.py  reports.py  users.py  websocket.py
app/core/: config.py  constants.py  database.py  logger.py
app/models/: __init__.py  models.py  schemas.py
app/prompts/: __init__.py  base.py  emotion.py  report.py
app/schemas/: __init__.py  common.py  reports.py  requests.py  responses.py
app/services/: analysis.py  answer.py  gcp_storage.py  question.py  report.py  speech_to_text.py  user.py
app/utils/: common.py  prompts.py
