[project]
name = "moa-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "openai>=1.0.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "beanie>=1.25.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "google-cloud-storage>=2.10.0",
    "python-multipart>=0.0.20",
]
